# installer-NQRust-Identity

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  config_template.yaml  docker-compose.yaml  env_template  northwind.sql
.github/workflows/: auto-release-main.yml  release.yml
bootstrap/: Dockerfile  init.sh
config_examples/: README.md  config.anthropic.yaml  config.azure.yaml  config.bedrock.yaml  config.deepseek.yaml  config.google_ai_studio.yaml  config.google_vertexai.yaml  config.grok.yaml  config.groq.yaml  config.lm_studio.yaml  config.ollama.yaml  config.open_router.yaml  config.qwen3.yaml  config.zhipu.yaml
config_templates/common/: engine.yaml  pipeline.yaml  settings.yaml
config_templates/providers/: anthropic.yaml  azure.yaml  bedrock.yaml  deepseek.yaml  google_ai_studio.yaml  google_vertexai.yaml  grok.yaml  groq.yaml  lm_studio.yaml  ollama.yaml  open_router.yaml  openai.yaml  qwen3.yaml  zhipu.yaml
scripts/install/: install.sh
src/: main.rs  templates.rs  utils.rs
src/app/: form_data.rs  mod.rs  registry_form.rs  state.rs  updates.rs
src/pages/: confirmation.rs  error.rs  installing.rs  mod.rs  success.rs  update.rs
src/ui/: ascii_art.rs  config_selection.rs  confirmation.rs  env_setup.rs  error.rs  installing.rs  mod.rs  registry.rs  success.rs  update.rs
