[package]
name = "installer-analytics"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["Idham <idhammultazam7@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
